.metadata/.plugins/org.eclipse.cdt.ui/stm32_f103.build.log
08:12:48 **** Incremental Build of configuration Debug for project stm32_f103 ****
make -j3 all 
arm-none-eabi-gcc "/Users/danielbraun/devel/train/sw/trainctl/auto1.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Core/Inc -I"/Users/danielbraun/devel/train/sw/trainctl" -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"trainctl/auto1.d" -MT"trainctl/auto1.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "trainctl/auto1.o"
arm-none-eabi-gcc "/Users/danielbraun/devel/train/sw/trainctl/block_canton.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Core/Inc -I"/Users/danielbraun/devel/train/sw/trainctl" -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"trainctl/block_canton.d" -MT"trainctl/block_canton.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "trainctl/block_canton.o"
arm-none-eabi-gcc "/Users/danielbraun/devel/train/sw/trainctl/canton.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Core/Inc -I"/Users/danielbraun/devel/train/sw/trainctl" -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"trainctl/canton.d" -MT"trainctl/canton.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "trainctl/canton.o"
arm-none-eabi-gcc "/Users/danielbraun/devel/train/sw/trainctl/railconfig.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Core/Inc -I"/Users/danielbraun/devel/train/sw/trainctl" -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"trainctl/railconfig.d" -MT"trainctl/railconfig.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "trainctl/railconfig.o"
arm-none-eabi-gcc "/Users/danielbraun/devel/train/sw/trainctl/statval.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Core/Inc -I"/Users/danielbraun/devel/train/sw/trainctl" -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"trainctl/statval.d" -MT"trainctl/statval.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "trainctl/statval.o"
/Users/danielbraun/devel/train/sw/trainctl/railconfig.c:196:2: error: #error holala
 #error holala
  ^~~~~
/Users/danielbraun/devel/train/sw/trainctl/railconfig.c:220:3: warning: excess elements in array initializer
   {{0x00, 0x01, 0   },    {0xFF, 0xFF, 0xFF},   50},  // 2
   ^
/Users/danielbraun/devel/train/sw/trainctl/railconfig.c:220:3: note: (near initialization for 'BlockCantons')
/Users/danielbraun/devel/train/sw/trainctl/railconfig.c:222:3: warning: excess elements in array initializer
   {{0xFF, 0xFF, 0xFF}, {0xFF, 0xFF, 0xFF},  50},
   ^
/Users/danielbraun/devel/train/sw/trainctl/railconfig.c:222:3: note: (near initialization for 'BlockCantons')
/Users/danielbraun/devel/train/sw/trainctl/railconfig.c:223:3: warning: excess elements in array initializer
   {{0xFF, 0xFF, 0xFF}, {0xFF, 0xFF, 0xFF},  50},
   ^
/Users/danielbraun/devel/train/sw/trainctl/railconfig.c:223:3: note: (near initialization for 'BlockCantons')
make: *** [trainctl/subdir.mk:68: trainctl/railconfig.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j3 all" terminated with exit code 2. Build might be incomplete.

08:15:15 Build Failed. 3 errors, 3 warnings. (took 2m:27s.660ms)

